update swagger for categories endpoints
