# backend/docs/swagger.yaml
@@ -11,7 +11,12 @@ definitions:
       user_message:
         type: string
     type: object
-  v1.createRequest:
+  v1.createCategoryRequest:
+    properties:
+      name:
+        type: string
+    type: object
+  v1.createHabitReq:
     properties:
       category_id:
         type: integer
@@ -381,33 +386,6 @@ paths:
       summary: Verify user's email
       tags:
       - auth
-  /habits/categories:
-    get:
-      description: Get habits categories
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK.
-          schema:
-            items:
-              $ref: '#/definitions/v1.getCategoriesResponse'
-            type: array
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/apperr.AppError'
-        "401":
-          description: Unauthorized. User does not have access to the habits
-          schema:
-            $ref: '#/definitions/apperr.AppError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/apperr.AppError'
-      summary: Get habits categories
-      tags:
-      - habits
   /habits/days:
     get:
       description: Get week days
@@ -435,6 +413,68 @@ paths:
       summary: Get week days
       tags:
       - habits
+  /users/{id}/categories:
+    get:
+      description: Get user's categories
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK.
+          schema:
+            items:
+              $ref: '#/definitions/v1.getCategoriesResponse'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/apperr.AppError'
+        "401":
+          description: Unauthorized. User does not have access to the habits
+          schema:
+            $ref: '#/definitions/apperr.AppError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/apperr.AppError'
+      summary: Get user's categories
+      tags:
+      - categories
+    post:
+      consumes:
+      - application/json
+      description: Create category for user
+      parameters:
+      - description: 'Authorization header must be set for valid response. It should
+          be in format: Bearer {access_token}'
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: create category request parameters
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/v1.createCategoryRequest'
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/apperr.AppError'
+        "401":
+          description: Unauthorized. User does not have access to the categories
+          schema:
+            $ref: '#/definitions/apperr.AppError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/apperr.AppError'
+      summary: Create category for user
+      tags:
+      - categories
   /users/{id}/habits:
     get:
       description: Get list of user's habits
@@ -490,7 +530,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/v1.createRequest'
+          $ref: '#/definitions/v1.createHabitReq'
       - description: Interval type
         in: body
         name: interval
